[gd_scene load_steps=3 format=3 uid="uid://cxp3j2vqewvyu"]

[ext_resource type="Script" uid="uid://bikong58p1ql2" path="res://scripts/DifficultySelect.gd" id="1_diff_select"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.2, 0.25, 0.3, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2(2, 2)

[node name="DifficultySelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_diff_select")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.15, 0.18, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -280.0
offset_right = 450.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 48
text = "Pense Rápido!"
horizontal_alignment = 1

[node name="VersionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "ver 1.00"
horizontal_alignment = 1

[node name="ModeIndicator" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.7, 1, 1)
theme_override_font_sizes/font_size = 28
text = "MODO: MATEMÁTICA"
horizontal_alignment = 1

[node name="CardsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1

[node name="CardFacil" type="Panel" parent="VBoxContainer/CardsContainer"]
custom_minimum_size = Vector2(200, 280)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CardsContainer/CardFacil"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VBoxContainer/CardsContainer/CardFacil/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 36
text = "FÁCIL"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/CardsContainer/CardFacil/VBoxContainer"]
layout_mode = 2

[node name="Sample1" type="Label" parent="VBoxContainer/CardsContainer/CardFacil/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "2+2"
horizontal_alignment = 1

[node name="Sample2" type="Label" parent="VBoxContainer/CardsContainer/CardFacil/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "1+4"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer/CardsContainer/CardFacil/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/CardsContainer/CardFacil/VBoxContainer"]
layout_mode = 2

[node name="AgeLabel" type="Label" parent="VBoxContainer/CardsContainer/CardFacil/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Idade: 6-7"
horizontal_alignment = 1

[node name="CardMedio" type="Panel" parent="VBoxContainer/CardsContainer"]
custom_minimum_size = Vector2(200, 280)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CardsContainer/CardMedio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VBoxContainer/CardsContainer/CardMedio/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 36
text = "MÉDIO"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/CardsContainer/CardMedio/VBoxContainer"]
layout_mode = 2

[node name="Sample1" type="Label" parent="VBoxContainer/CardsContainer/CardMedio/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "7×3"
horizontal_alignment = 1

[node name="Sample2" type="Label" parent="VBoxContainer/CardsContainer/CardMedio/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "18÷2"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer/CardsContainer/CardMedio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/CardsContainer/CardMedio/VBoxContainer"]
layout_mode = 2

[node name="AgeLabel" type="Label" parent="VBoxContainer/CardsContainer/CardMedio/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Idade: 7-8"
horizontal_alignment = 1

[node name="CardDificil" type="Panel" parent="VBoxContainer/CardsContainer"]
custom_minimum_size = Vector2(200, 280)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CardsContainer/CardDificil"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VBoxContainer/CardsContainer/CardDificil/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 36
text = "DIFÍCIL"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/CardsContainer/CardDificil/VBoxContainer"]
layout_mode = 2

[node name="Sample1" type="Label" parent="VBoxContainer/CardsContainer/CardDificil/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "12×8"
horizontal_alignment = 1

[node name="Sample2" type="Label" parent="VBoxContainer/CardsContainer/CardDificil/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "144÷12"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer/CardsContainer/CardDificil/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/CardsContainer/CardDificil/VBoxContainer"]
layout_mode = 2

[node name="AgeLabel" type="Label" parent="VBoxContainer/CardsContainer/CardDificil/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Idade: 9"
horizontal_alignment = 1

[node name="InstructionsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="BackLabel" type="Label" parent="VBoxContainer/InstructionsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 22
text = "Shift VOLTAR"

[node name="ToggleLabel" type="Label" parent="VBoxContainer/InstructionsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 22
text = "↓ MUDAR PARA PORT"

[node name="StartLabel" type="Label" parent="VBoxContainer/InstructionsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "SPACE COMEÇAR!"
